--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="robots" content="index, follow">
     <link rel="icon" href="favicon.ico">
     <title>Adel's Beauty Empire | Premium Wigs & Beauty Services</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
