I forgot the styles 4

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
                 <h3>Adel's Beauty Empire</h3>
                 <p>Transforming beauty one strand at a time. We offer premium quality wigs and professional beauty services.</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100080616889247"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://wa.me/+237671913992"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
             
@@ -283,7 +283,7 @@
             <div class="footer-section">
                 <h3>Contact Us</h3>
                 <p><i class="fas fa-map-marker-alt"></i> Cameroon, Yaoundé, Ekounou(Stade Abega)</p>
-                <p><i class="fas fa-phone"></i> (+237) 673-044-19</p>
+                <p><i class="fas fa-phone"></i> (+237) 6 71 91 39 92</p>
                 <p><i class="fas fa-envelope"></i> adelsbeautyempire@gmail.com</p>
             </div>
         </div>
