I forgot the styles 5

--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                     <a href="https://www.facebook.com/profile.php?id=100080616889247"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-tiktok"></i></a>
+                    <a href="mailto:adelbeautyempire@gmail.com"><i class="fab fa-google"></i></a>
                     <a href="https://wa.me/+237671913992"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
@@ -284,7 +285,7 @@
                 <h3>Contact Us</h3>
                 <p><i class="fas fa-map-marker-alt"></i> Cameroon, Yaoundé, Ekounou(Stade Abega)</p>
                 <p><i class="fas fa-phone"></i> (+237) 6 71 91 39 92</p>
-                <p><i class="fas fa-envelope"></i> adelsbeautyempire@gmail.com</p>
+                <p><i class="fas fa-envelope"></i> adelbeautyempire@gmail.com</p>
             </div>
         </div>
         
